navbar and hero-section

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
  <meta charset="UTF-8">
  <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -12,6 +13,15 @@
  <header>
   <nav>navigation</nav>
   <section id="hero-section">hero section</section>
+  <h1>We Are An Awesome Creative Agency</h1>
+  <br>
+  <hr>
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus velit totam, cum quis perspiciatis expedita
+   beatae! Laboriosam incidunt totam, corrupti dolore odit repudiandae aliquam perspiciatis fuga eos porro, fugiat iure?
+  </p>
+  <br>
+  <button>Learn More</button>
+
  </header>
 
  <main>
@@ -21,7 +31,8 @@
   <section id="team-section">team section</section>
   <section id="contact_client-section">contact client section</section>
  </main>
- 
+
  <footer>footer</footer>
 </body>
+
 </html>
