complete navbar_hero-section

--- a/index.html
+++ b/index.html
@@ -11,7 +11,19 @@
 
 <body>
  <header>
-  <nav>navigation</nav>
+  <div class="navbar">
+   <a href="#">tajam</a>
+   <ul class="nav">
+    <li><a href="#home">HOME</a></li>
+    <li><a href="#about">ABOUT</a></li>
+    <li><a href="#expertise">EXPERTISE</a></li>
+    <li><a href="#teams">TEAMS</a></li>
+    <li><a href="#works">WORKA</a></li>
+    <li><a href="#people_say">PEOPLE SAY</a></li>
+    <li><a href="#contact">CONTACT</a></li>
+   </ul>
+
+  </div>
   <section id="hero-section">hero section</section>
   <h1>We Are An Awesome Creative Agency</h1>
   <br>
@@ -27,9 +39,9 @@
  <main>
   <section id="our_story-section">our story section</section>
   <section id="watch-section">watch section</section>
-  <section id="expertise-section">expertise section</section>
+  <!--<section id="expertise-section">expertise section</section>
   <section id="team-section">team section</section>
-  <section id="contact_client-section">contact client section</section>
+  <section id="contact_client-section">contact client section</section>-->
  </main>
 
  <footer>footer</footer>
