--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
  <header>
 
   <div class="navbar">
-   <a href="#">tajam</a>
+   <a href="#" class="logo">tajam</a>
    <ul class="nav">
     <li><a href="#home">HOME</a></li>
     <li><a href="#about">ABOUT</a></li>
@@ -39,7 +39,7 @@
   </div>
 
   <div class="about-area" id="about">
-   <h2>Our Story</h2>
+   <h2>OUR STORY</h2>
    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus velit totam, cum quis perspiciatis expedita
    </p>
    <br>
@@ -49,8 +49,8 @@
 
   <div class="watch-area" id="watch">
    <div class="text-part"></div>
-   <h2>WATCH OUT STORY</h2>
    <button>WATCH OUR STORY</button>
+   <h2>WATCH OUR STORY</h2>
   </div>
  </header>
 
