got super confused started over with new index2.html

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
    </ul>
   </div>
 
-  <div class="home-area" id="home">
+  <div class="banner-area" id="home">
    <div class="text-part"></div>
    <h1>We Are An Awesome Creative Agency</h1>
    <hr>
@@ -62,8 +62,7 @@
   -->
 
  <main>
-  <section id="our_story-section">our story section</section>
-  <section id="watch-section">watch section</section>
+
   <!-- <section id="expertise-section">expertise section</section>
   <section id="team-section">team section</section>
   <section id="contact_client-section">contact client section</section>
