have basic structure complete

--- a/index2.html
+++ b/index2.html
@@ -12,7 +12,7 @@
 <body>
 
  <div class="navbar">
-  <a class="logo" href="#"> tajam</a>
+  <a class="logo" href="/Users/blackwolvespurpleclothes/Desktop/psd_to_html_local/images/photoshop/design-assets/png/logo with tajam.png"> tajam</a>
   <ul class="nav">
    <li><a href="#home">Home</a></li>
    <li><a href="#about">About</a></li>
@@ -23,12 +23,14 @@
   </ul>
  </div>
 
- <section class="banner-area" id="home">
- </section>
+ <section class="banner-area" id="home"></section>
 
  <section class="about-area" id="about">
   <div class="text-part">
    <h1>We Are An Awesome Creative Agency</h1>
+   <br>
+   <hr>
+   <br>
    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A aliquid atque commodi dolor est nobis veniam! Eius
     rerum, unde. Accusamus corporis esse eveniet exercitationem fugiat harum pariatur sequi similique tenetur vitae.
     Aliquam amet est excepturi, exercitationem facere fugit ipsa laborum molestiae nemo officiis placeat quos repellat
@@ -39,13 +41,13 @@
  <section class="watch-area" id="watch">
   <div class="text-part"></div>
   <button>WATCH OUR STORY</button>
-  <h2>WATCH OUR STORY</h2>
+  <h2>Watch Our Story</h2>
   </div>
  </section>
 
  <section class="expertise-area" id="expertise">
   <div class="text-part">
-   <h2>Expertise Area</h2>
+   <h2>Expertise</h2>
    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A aliquid atque commodi dolor est nobis veniam! Eius
     rerum, unde. Accusamus corporis esse eveniet exercitationem fugiat harum pariatur sequi similique tenetur vitae.
     Aliquam amet est excepturi, exercitationem facere fugit ipsa laborum molestiae nemo officiis placeat quos repellat
@@ -55,7 +57,7 @@
 
  <section class="works-area" id="works">
   <div class="text-part">
-   <h2>Services Area</h2>
+   <h2>Works</h2>
    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A aliquid atque commodi dolor est nobis veniam! Eius
     rerum, unde. Accusamus corporis esse eveniet exercitationem fugiat harum pariatur sequi similique tenetur vitae.
     Aliquam amet est excepturi, exercitationem facere fugit ipsa laborum molestiae nemo officiis placeat quos repellat
@@ -65,7 +67,7 @@
 
  <section class="peoplesay-area" id="peoplesay">
   <div class="text-part">
-   <h2>People Say Area</h2>
+   <h2>People Say</h2>
    <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. A aliquid atque commodi dolor est nobis veniam! Eius
     rerum, unde. Accusamus corporis esse eveniet exercitationem fugiat harum pariatur sequi similique tenetur vitae.
     Aliquam amet est excepturi, exercitationem facere fugit ipsa laborum molestiae nemo officiis placeat quos repellat
@@ -73,7 +75,7 @@
   </div>
  </section>
 
- <section class="contact-area" id="contact">
+ <section class="contact" id="contact">
   <div class="text-part">
    <h2>Contact Area</h2>
    <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. A aliquid atque commodi dolor est nobis veniam! Eius
